--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -7,5 +7,38 @@
     "aloqa" : "Communication",
     "prh": "Excellence in everything",
     "ourprojects" :"Our Projects",
-    "connect" : "Connection"
+    "connect" : "Connection",
+    "services":"Our services",
+    "serv1": "You can get free information from our company's specialists",
+    "serv2": "Documents clearance",
+    "serv3": "Repair correction service",
+    "serv4":"Team of professionals",
+    "our-company":"Our Company",
+    "home": "Your Dream home",
+    "num": "Number of employees",
+    "obj": "Objects",
+    "equipment": "Special equipment",
+    "years": "14 years on the market",
+    "projects1": "This is a large-scale socially significant project. The cultural and entertainment cluster in Tashkent is one of the new attractions.",
+    "projects2": "Multifunctional residential complex created to provide comfort to the residents of Uzbekistan.",
+    "projects3": "A grandiose residential area in the heart of the capital.",
+    "allnews": "All our news",
+    "newtitle1": "Who is a construction project manager?",
+    "newabout1": "The Discover Invest company has several construction project managers. This is a specialist responsible for the successful implementation of the construction site entrusted to him. He manages the entire process, from the planning stage and approval of project documentation to the commissioning of the building, and sometimes also performs post-project support. Latest",
+    "newtitle2": "Congratulations to everyone on the upcoming 2024!",
+    "newabout2": "The sophisticated interior design of the halls will create an atmosphere of comfort even before entering the apartment, and a convenient navigation system will help you easily get to the floor you need or exit to the territory",
+    "newtitle3":"Location",
+    "newabout3": "The transport infrastructure allows you to easily move to anywhere in the city: you just have to choose the desired and desired direction.",
+    "newtitle4": "We continue to introduce you to the multifunctional objects of Discover Invest.",
+    "newabout4": "We continue to introduce you to the multifunctional objects of Discover Invest. One of them is the Yangi Choshtepa residential complex built in the Yangihayat district of Tashkent. The total construction area is 12 hectares. To date, 29 houses have been built.",
+    "partners": "Exchange ideas with partners",
+    "about-prh": "We don't just create projects, we create new opportunities. By building state-scale facilities, we are building the future. We care about the environment: the company takes full responsibility for environmental aspects associated with the construction and operation of buildings and infrastructure",
+    "more": "Learn More",
+    "message":"Do you have any questions, suggestions or requests?",
+    "yourname": "Your name",
+    "phonenum": "Your phone number",
+    "mess": "Your message...",
+    "sending": "Sending",
+    "subscribe": "Subscribe to our social networks"
+
 }
