--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -7,5 +7,37 @@
     "aloqa" : "Коммуникация",
     "prh": "Совершенство во всём",
     "ourprojects" :"Наши проекты",
-    "connect": "Связь"
+    "connect": "Связь",
+    "services": "Наши услуги",
+    "serv1": "Вы можете бесплатно получить информацию у специалистов нашей компании",
+    "serv2": "Положительные отзывы клиентов",
+    "serv3": "Гарантия на все работы",
+    "serv4":"Команда профессионалов",
+    "our-company":"Наша компания",
+    "home": "Дом вашей мечты",
+    "num": "Количество сотрудников",
+    "obj": "Объекты",
+    "equipment": "Спец.техника",
+    "years": "2 года на рынке",
+    "projects1": "Это масштабный социально-значимый проект. Культурно-развлекательный кластер в Ташкенте является одной из новых достопримечательностей.",
+    "projects2": "Многофункциональный жилой комплекс, созданный для обеспечения комфорта жителям Узбекистана.",
+    "projects3": "Грандиозный жилой квартал в сердце столицы.",
+    "allnews": "Все наши новости",
+    "newtitle1": "Кто такой менеджер строительного проекта?",
+    "newabout1": "В компании Discover Invest существует несколько менеджеров строительного проекта. Это – специалист, отвечающий за успешную реализацию вверенного ему участка строительства. Он управляет всем процессом, от этапа планирования и согласования проектной документации до ввода здания в эксплуатацию, а иногда выполняет и послепроектное сопровождение. Последние",
+    "newtitle2": "Холлы",
+    "newabout2": "Утонченный интерьерный дизайн холлов создаст атмосферу уюта еще до входа в квартиру, а удобная система навигации поможет легко добраться до нужного вам этажа или выхода на территорию",
+    "newtitle3": "Месторасположение",
+    "newabout3": "Транспортная инфраструктура позволяет с легкостью перемещаться в любую точку города: Вам остается только выбрать желаемое и нужное направление.",
+    "newtitle4": "Мы продолжаем знакомить Вас с многофункциональными объектами Discover Invest.",
+    "newabout4": "Мы продолжаем знакомить Вас с многофункциональными объектами Discover Invest. Один из них жилой комплекс Янги Чоштепа построенный в Янгихаятском районе города Ташкента. Общая площадь постройки составляет 12 га. На сегодняшний день построены 29 домов.",
+    "partners": "Обменивайтесь идеями с партнерами",
+    "about-prh": "Мы не просто создаём проекты, мы создаем новые возможности. Строя объекты государственного масштаба, мы строим будущее. Мы заботимся об окружающей среде: компания берет на себя полную ответственность за экологические аспекты, связанные со строительством и эксплуатацией зданий и инфраструктуры",
+    "more": "Учить больше",
+    "message":"Есть вопросы, предложения и пожелания?",
+    "yourname": "Твое имя",
+    "phonenum": "Ваш номер телефона",
+    "mess": "Ваше сообщение...  ",
+    "sending": "Отправка",
+    "subscribe": "Подпишитесь на наши социальные сети"
 }
