--- a/public/locales/uz.json
+++ b/public/locales/uz.json
@@ -7,5 +7,39 @@
     "aloqa" : "Aloqa",
     "prh" : "Hamma narsada a'lo",
     "ourprojects" : "Bizning loyihalarimiz",
-    "connect": "Bog'lanish"
+    "connect": "Bog'lanish",
+    "services" : "Bizning xizmatlarimiz",
+    "serv1": "Siz kompaniyamiz mutaxassislaridan bepul ma'lumot olishingiz mumkin",
+    "serv2": "Hujjatlarni rasmiylashtirish",
+    "serv3": "Ta`mirlash tuzatish xizmati",
+    "serv4":"Professionallar jamoasi",
+    "our-company":"Bizning kompaniyada",
+    "home": "Sizning orzuingizdagi uy",
+    "num": "Xodimlar soni",
+    "obj": "Obyektlar",
+    "equipment": "Maxsus mijozlar",
+    "years": "bozorda 14 yil",
+    "projects1": "Bu keng ko'lamli ijtimoiy ahamiyatga ega loyiha. Toshkentdagi madaniy-ko'ngilochar klaster yangi diqqatga sazovor joylardan biridir.",
+    "projects2": "O'zbekiston aholisiga qulaylik yaratish maqsadida yaratilgan ko'p funksiyali turar-joy majmuasi.",
+    "projects3": "Poytaxt markazidagi muhtasham turar-joy massivi.",
+    "allnews": "Barcha yangiliklar",
+    "newtitle1": "Qurilish loyihasi menejeri kim?",
+    "newabout1": "Discover Invest kompaniyasida qurilish loyihasi bo'yicha bir nechta menejerlar mavjud. Bu mutaxassis o'ziga ishonib topshirilgan qurilish ob'ektini muvaffaqiyatli amalga oshirish uchun mas'uldir. U rejalashtirish bosqichidan va loyiha hujjatlarini tasdiqlashdan tortib, ishga tushirishgacha bo'lgan butun jarayonni boshqaradi. binoning, va ba'zan ham loyihadan keyingi yordamni amalga oshiradi. Eng so'nggi",
+    "newtitle2": "Barchani kelayotgan 2024 yil bilan tabriklayman!",
+    "newabout2": "Zallarning murakkab ichki dizayni kvartiraga kirishdan oldin ham qulaylik muhitini yaratadi va qulay navigatsiya tizimi sizga kerakli qavatga osongina chiqishga yoki hududga chiqishga yordam beradi.",
+    "newtitle3": "Manzil",
+    "newabout3": "Transport infratuzilmasi shaharning istalgan nuqtasiga osongina ko'chib o'tishga imkon beradi: siz faqat kerakli va kerakli yo'nalishni tanlashingiz kerak.",
+    "newtitle4": "Biz sizni Discover Invest ko'p funksiyali ob'ektlari bilan tanishtirishda davom etamiz.",
+    "newabout4": "Biz sizlarni 'ATAEV BAHODIR BUILD' kompaniyasining ko'p funksiyali ob'ektlari bilan tanishtirishda davom etamiz. Ulardan biri Toshkent shahrining Yangixoyat tumanida barpo etilgan 'Yangi Choshtepa turar-joy majmuasidir. Qurilishning umumiy maydoni 12 gektarni tashkil etadi. Shu kungacha 29 ta uy-joy qurildi. qurilgan.",
+    "partners": "Hamkorlar bilan fikr almashish",
+    "about-prh": "Biz shunchaki loyihalar yaratmaymiz, yangi imkoniyatlar yaratamiz. Davlat miqyosidagi inshootlarni qurish orqali biz kelajakni quryapmiz. Biz atrof-muhit haqida qayg'uramiz: kompaniya binolar va infratuzilmani qurish va ulardan foydalanish bilan bog'liq ekologik jihatlar uchun to'liq javobgarlikni o'z zimmasiga oladi.",
+    "more": "Batafsil bilish",
+    "message":"Savol, taklif va murojaatlar bormi?",
+    "yourname": "Ismingiz",
+    "phonenum": "Telefon raqamingiz",
+    "mess": "Sizning xabaringiz...",
+    "sending": "Yuborish",
+    "subscribe": "Ijtimoiy tarmoqlarimizga obuna bo'ling",
+    "mk":""
+
 }
